fix visibility

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 .article {
     background-image: url(https://assets.radiox.co.uk/2017/09/chumbawamba---tubthumping--1488302223-view-0.jpg);
 }
+
+#songResults{
+    visibility: hidden;
+    font-weight: normal;
+    font-size: 28px;
+}
